# asi

./: ASI_CONDENSED_SYNTHESIS.md  CHANGELOG.md  INTERACTION_PATTERNS.md  MONAD_COMONAD_COLOR_TYPES.md  MONAD_COMONAD_QUICKREF.md  MONAD_COMONAD_RULES.md  PHASE_1_COMPLETION_REPORT.md  PR_BODY.md  README.md  SESSION_COMPLETION_SUMMARY.md  SKILL_INTEGRATION_MANIFEST.md  SKILL_UPDATES_COMPLETE_SUMMARY.md  SWAN_HEDGES_ARCHITECTURE_DIAGRAM.md  SWAN_HEDGES_INTEGRATION_SUMMARY.md  SWAN_HEDGES_QUICK_REFERENCE.md  SWAN_HEDGES_TOPOLOGICAL_ASI_INTEGRATION.md  TEST_SUITE_COMPLETION_REPORT.md  TOPOS_IES_SKILLS_SUMMARY.md  TRIPARTITE_AGENTS.md  bmorphism_intent_evolution.json  cli.js  coherence_periods.json  gh_acset_export.json  package.json  pontryagin_synthesis.json  pytest.ini  quick_validate.py  run_tests.py  skills.json  topos_ies_skills.md  topos_snapshot.bb
ies/: CODEX_GAY_DEPLOYMENT_GUIDE.md  COLOR_GENERATION_GUIDE.md  CONTINUATION_SESSION_FINAL_SUMMARY.txt  DELIVERY_CHECKLIST.md  FRAMEWORK_VALIDATION_COMPLETE.txt  GITHUB_NETWORK_ANALYSIS.md  GMRA_WORLDS_UNWORLDING.jl  GOBLIN_COMPLETE_PROJECT_STATUS.md  GOBLIN_CONTINUATION_SESSION_SUMMARY.txt  GOBLIN_MASTER_INDEX.md  GOBLIN_PHASE_2_1_IMPLEMENTATION_GUIDE.md  GOBLIN_PHASE_5_MOEBIUS_RULER.md  (+59 more)
ies/fermyon_agents/: ARCHITECTURE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  JIT_COMPLETION_SUMMARY.md  JIT_INTEGRATION.md  LLVM_INTEGRATION.md  PHASE_4_COMPLETION.md  spin.toml
ies/fermyon_agents/src/: agent_orchestrator.rs  duck_colors.rs  jit_compilation.rs  lib.rs  transduction_2tdx.rs
ies/fermyon_agents/tests/: integration_tests.rs
(+498 files in other folders)
