[package]
name = "fermyon_agents"
version = "0.1.0"
edition = "2021"
description = "Distributed CRDT E-Graph Agents on Fermyon Serverless Platform"

[dependencies]
spin-sdk = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "fermyon_agents"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true
codegen-units = 1
